# DFEE

./: .gitignore  DFEE_Functional_Specifications_Document.txt  README.md  STARTUP.md  cli.py  dfee_native_bridge.py  requirements.txt  server.py  start.bat
cpp_engine/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cpp_engine/bindings/python/: dfee_native_module.cpp
cpp_engine/cuda/: cuda_stub.cu
cpp_engine/include/dfee/: analyzer.hpp  bias.hpp  bridge_types.hpp  bridge_utils.hpp  color_spaces.hpp  cuda_runtime.hpp  image.hpp  native_error.hpp  profile.hpp  raw_decode.hpp  raw_metadata.hpp  renderer.hpp  session.hpp  solver.hpp  version.hpp
cpp_engine/migration_docs/: BUG_TRACKER.md  EDITING_FLOW_ARCHITECTURE.md  NEXT_PHASE_WORKPLAN.md  PERFORMANCE_METHOD.md  PLAN.md  TASKLIST.md
cpp_engine/src/: analyzer.cpp  bias.cpp  bridge_utils.cpp  color_spaces.cpp  cuda_runtime.cpp  image.cpp  profile.cpp  raw_decode.cpp  raw_metadata.cpp  renderer.cpp  session.cpp  solver.cpp
cpp_engine/tests/: test_core.cpp
cpp_engine/tools/: dfee_cli.cpp  export_benchmark.py
dfee/: __init__.py  analyzer.py  batch.py  bias.py  color_spaces.py  engine.py  ingest.py  post_effects.py  profile.py  renderer.py  report.py  solver.py
docs/: functional_specification.md  technical_architecture.md
frontend/: index.html
frontend/src/: App.jsx  CurvesPanel.jsx  HslPanel.jsx  index.css
profiles/print_stocks/: eastman_2302.yaml  fuji_3510.yaml  kodak_2383.yaml  kodak_2393.yaml
profiles/scanners/: darkroom_print.yaml  frontier_soft.yaml  neutral.yaml  noritsu_smooth.yaml
profiles/stocks/: astia_100.yaml  cinestill_50d.yaml  cinestill_800t.yaml  colorplus_200.yaml  delta_100.yaml  delta_3200.yaml  eastman_double_x.yaml  ektachrome_100.yaml  ektar_100.yaml  fuji_eterna_250d.yaml  gold_200.yaml  hp5_plus.yaml  hp5_plus_tone_tmp.txt  ilford_delta_3200.yaml  ilford_hp5.yaml  kodachrome_64.yaml  neopan_acros_100.yaml  portra_160.yaml  portra_400.yaml  portra_800.yaml  pro_400h.yaml  provia_100f.yaml  superia_400.yaml  tri_x_400.yaml  ultramax_400.yaml  velvia_50.yaml  vision3_250d.yaml  vision3_500t.yaml
tests/: test_dfee.py  test_native_bridge.py  test_server_errors.py
